--- a/index.html
+++ b/index.html
@@ -2,56 +2,46 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CV Online - Tên Của Bạn</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CV Online - Demo</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="container">
-    <header>
-      <img src="avatar.jpg" alt="Ảnh đại diện">
-      <h1>Tên Của Bạn</h1>
-      <p>Luật sư | Lập trình viên | Tư duy phản biện</p>
-    </header>
+    <div class="card">
+      <img src="avatar.jpg" alt="Avatar" class="avatar">
+      <h1>Nguyễn Văn Demo</h1>
+      <p class="title">Lập trình viên | Luật sư | Người học suốt đời</p>
+      <p>Email: demo@email.com</p>
+      <div class="buttons">
+        <a href="cv.pdf" class="btn" download><i class="fas fa-file-download"></i> Tải CV</a>
+        <a href="#contact" class="btn"><i class="fas fa-envelope"></i> Liên hệ</a>
+      </div>
+    </div>
 
-    <section class="info">
-      <h2>📞 Thông tin liên hệ</h2>
-      <p>Email: ban@example.com</p>
-      <p>Phone: 0901 234 567</p>
-      <p>Website: ban.github.io</p>
-    </section>
-
-    <section class="skills">
-      <h2>🛠️ Kỹ năng</h2>
-      <ul>
-        <li>C# / ASP.NET Core</li>
-        <li>HTML / CSS / JavaScript</li>
-        <li>Luật doanh nghiệp, tranh tụng</li>
-        <li>Tư duy phản biện / Trình bày rõ ràng</li>
+    <div class="section">
+      <h2>Kỹ năng</h2>
+      <ul class="skills">
+        <li><span>C# / .NET</span><div class="bar"><div class="progress" style="width: 90%"></div></div></li>
+        <li><span>HTML / CSS</span><div class="bar"><div class="progress" style="width: 85%"></div></div></li>
+        <li><span>JavaScript</span><div class="bar"><div class="progress" style="width: 75%"></div></div></li>
+        <li><span>Logic pháp lý</span><div class="bar"><div class="progress" style="width: 80%"></div></div></li>
       </ul>
-    </section>
+    </div>
 
-    <section class="experience">
-      <h2>💼 Kinh nghiệm</h2>
-      <p><strong>Luật sư tại Văn phòng Luật ABC</strong> (2021–nay)</p>
-      <p>Giải quyết tranh chấp doanh nghiệp, soạn thảo hợp đồng, tư vấn chiến lược pháp lý.</p>
-      <p><strong>Lập trình viên part-time</strong> (2023–nay)</p>
-      <p>Tham gia xây dựng hệ thống nội bộ bằng .NET Core.</p>
-    </section>
+    <div class="section">
+      <h2>Kinh nghiệm</h2>
+      <p><strong>Văn phòng Luật XYZ</strong> (2020–nay)</p>
+      <p>Tư vấn, soạn thảo hợp đồng, tranh tụng doanh nghiệp.</p>
+    </div>
 
-    <section class="actions">
-      <a href="cv.pdf" download class="btn">📄 Tải CV PDF</a>
-      <button onclick="showContact()" class="btn">📬 Gửi tin nhắn</button>
-    </section>
-
-    <div id="contact-form" style="display: none;">
-      <h3>Gửi tin nhắn</h3>
-      <input type="text" placeholder="Tên của bạn">
-      <input type="email" placeholder="Email">
-      <textarea placeholder="Lời nhắn..."></textarea>
-      <button>Gửi</button>
+    <div class="section" id="contact">
+      <h2>Liên hệ</h2>
+      <p>📧 demo@email.com</p>
+      <p>📞 0901 234 567</p>
     </div>
   </div>
-  <script src="script.js"></script>
 </body>
 </html>
