--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CV Online - Demo</title>
+  <title>Dr. Trí Tuệ - CV Online</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
@@ -12,9 +12,9 @@
   <div class="container">
     <div class="card">
       <img src="avatar.jpg" alt="Avatar" class="avatar">
-      <h1>Nguyễn Văn Demo</h1>
-      <p class="title">Lập trình viên | Luật sư | Người học suốt đời</p>
-      <p>Email: demo@email.com</p>
+      <h1>Dr. Trí Tuệ</h1>
+      <p class="title">Nhà tư tưởng | Cố vấn chiến lược | Tác giả best-seller</p>
+      <p>Email: dr.tri@tuegiac.org</p>
       <div class="buttons">
         <a href="cv.pdf" class="btn" download><i class="fas fa-file-download"></i> Tải CV</a>
         <a href="#contact" class="btn"><i class="fas fa-envelope"></i> Liên hệ</a>
@@ -22,25 +22,42 @@
     </div>
 
     <div class="section">
-      <h2>Kỹ năng</h2>
+      <h2>🌍 Sứ mệnh</h2>
+      <p>“Tái thiết tư duy nhân loại thông qua giáo dục, công nghệ và trí tuệ tập thể.”</p>
+    </div>
+
+    <div class="section">
+      <h2>🧠 Kỹ năng & Chuyên môn</h2>
       <ul class="skills">
-        <li><span>C# / .NET</span><div class="bar"><div class="progress" style="width: 90%"></div></div></li>
-        <li><span>HTML / CSS</span><div class="bar"><div class="progress" style="width: 85%"></div></div></li>
-        <li><span>JavaScript</span><div class="bar"><div class="progress" style="width: 75%"></div></div></li>
-        <li><span>Logic pháp lý</span><div class="bar"><div class="progress" style="width: 80%"></div></div></li>
+        <li><span>Chiến lược tổ chức & hoạch định tầm nhìn</span><div class="bar"><div class="progress" style="width: 95%"></div></div></li>
+        <li><span>Trí tuệ nhân tạo & công nghệ giáo dục</span><div class="bar"><div class="progress" style="width: 92%"></div></div></li>
+        <li><span>Diễn thuyết & truyền cảm hứng</span><div class="bar"><div class="progress" style="width: 98%"></div></div></li>
+        <li><span>Pháp lý, đạo đức và tư tưởng nhân văn</span><div class="bar"><div class="progress" style="width: 90%"></div></div></li>
       </ul>
     </div>
 
     <div class="section">
-      <h2>Kinh nghiệm</h2>
-      <p><strong>Văn phòng Luật XYZ</strong> (2020–nay)</p>
-      <p>Tư vấn, soạn thảo hợp đồng, tranh tụng doanh nghiệp.</p>
+      <h2>📚 Tác phẩm nổi bật</h2>
+      <ul>
+        <li><strong>“Kiến tạo kỷ nguyên Tuệ Giác”</strong> – 2023 | Top 1 sách ảnh hưởng đến lãnh đạo toàn cầu</li>
+        <li><strong>“Cách mạng giáo dục tư duy”</strong> – 2021 | Được dịch ra 12 thứ tiếng</li>
+        <li><strong>“Luật sống – Nghệ thuật dẫn đường”</strong> – 2019 | Bestseller 32 tuần liên tiếp</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>💼 Kinh nghiệm</h2>
+      <p><strong>Giám đốc chiến lược - Tổ chức Giáo dục Tuệ Giác Toàn Cầu</strong> (2020–nay)</p>
+      <p>Phát triển hệ thống giáo dục dựa trên trí tuệ bản thể và khai phóng tiềm năng con người.</p>
+      <p><strong>Chuyên gia cố vấn cấp cao - UNESCO & Liên Hiệp Quốc</strong> (2016–2020)</p>
+      <p>Tham gia hoạch định chính sách giáo dục tương lai và nhân quyền.</p>
     </div>
 
     <div class="section" id="contact">
-      <h2>Liên hệ</h2>
-      <p>📧 demo@email.com</p>
-      <p>📞 0901 234 567</p>
+      <h2>📬 Liên hệ</h2>
+      <p>Email: dr.tri@tuegiac.org</p>
+      <p>Website: www.tritueofficial.org</p>
+      <p>LinkedIn: linkedin.com/in/tritue</p>
     </div>
   </div>
 </body>
