--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   <!-- Header -->
   <header class="max-w-4xl mx-auto px-6 pt-10 pb-6">
     <div class="glass rounded-2xl p-6 md:p-8 flex flex-col md:flex-row items-start md:items-center gap-6">
-      <div class="w-20 h-20 rounded-2xl bg-indigo-600/20 grid place-content-center text-3xl font-extrabold">H</div>
+      <div class="w-20 h-20 rounded-full overflow-hidden">
+        <img src="https://drive.google.com/uc?export=view&id=1yvxHWBw4I6BZKoVqhoKqxF91hNkSZSKH" alt="Ảnh đại diện Nguyễn Thế Hải" class="w-full h-full object-cover">
+      </div>
       <div class="flex-1">
         <h1 class="text-2xl md:text-3xl font-extrabold leading-tight">Nguyễn Thế Hải<span class="block text-xl md:text-2xl font-semibold text-indigo-400">Playable Ads Developer (Luna)</span></h1>
         <p class="mt-2 text-sm md:text-base text-[var(--muted)]">Chuyên phát triển playable ads bằng <strong>Unity / HTML5</strong>, nền tảng lập trình game di động với kinh nghiệm nhiều năm phát triển và tối ưu game Unity 3D. Thành thạo xử lý các dự án phức tạp khi chuyển Unity sang Luna, tối ưu particle, model 3D, texture và sửa lỗi shader. Có kinh nghiệm kiến trúc code dễ đọc, tối ưu hiệu năng, xây dựng script tự động hóa cho pipeline build. Công khai các sản phẩm game đã phát triển trên Google Play.</p>
@@ -134,7 +136,7 @@
     <div class="mt-4 grid md:grid-cols-2 gap-4">
       <a class="glass rounded-2xl p-5 block hover:bg-white/5" href="https://play.google.com/store/apps/details?id=com.onegame.chickenshooter" target="_blank" rel="noopener">
         <div class="thumb mb-3">
-          <img src="https://play-lh.googleusercontent.com/DRqV1aZLqByOLw5V7um0dGul2XNMbGXJIkF6yHkl0oCdc5c4m5yLMJ5aUdo4x28wvg=w240-h480-rw" alt="Strike Galaxy Attack thumbnail">
+          <img src="https://play.google.com/uc?export=view&id=1yvxHWBw4I6BZKoVqhoKqxF91hNkSZSKH" alt="Strike Galaxy Attack thumbnail">
         </div>
         <h3 class="font-semibold">Strike Galaxy Attack</h3>
         <p class="text-[var(--muted)] mt-1">Game bắn gà không gian – hơn 5 triệu lượt tải trên Google Play.</p>
