--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <header class="max-w-4xl mx-auto px-6 pt-10 pb-6">
     <div class="glass rounded-2xl p-6 md:p-8 flex flex-col md:flex-row items-start md:items-center gap-6">
       <div class="w-20 h-20 rounded-full overflow-hidden">
-        <img src="https://drive.google.com/uc?export=view&id=1yvxHWBw4I6BZKoVqhoKqxF91hNkSZSKH" alt="Ảnh đại diện Nguyễn Thế Hải" class="w-full h-full object-cover">
+        <img src=""assets/avatar.png" alt="Ảnh đại diện Nguyễn Thế Hải" class="w-full h-full object-cover">
       </div>
       <div class="flex-1">
         <h1 class="text-2xl md:text-3xl font-extrabold leading-tight">Nguyễn Thế Hải<span class="block text-xl md:text-2xl font-semibold text-indigo-400">Playable Ads Developer (Luna)</span></h1>
