--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    :root{--card:#0b1220;--ink:#e6edf6;--muted:#b8c6e3;--brand:#4f46e5;}
+  :root{--card:#0b1220;--ink:#e6edf6;--muted:#b8c6e3;--brand:#4f46e5;}
     html{scroll-behavior:smooth}
     body{font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji"}
     .glass{background:linear-gradient(180deg,rgba(255,255,255,.08),rgba(255,255,255,.02));backdrop-filter:saturate(140%) blur(8px);border:1px solid rgba(255,255,255,.12)}
     .chip{border:1px solid rgba(255,255,255,.18)}
     .thumb{border-radius:0.75rem; overflow:hidden;}
     .thumb img{width:100%; height:auto; display:block;}
+    .avatar{width:120px; height:120px;}
     @media print{.no-print{display:none} body{background:#fff} .glass{background:transparent;border:none} .print-white{color:#000}}
   </style>
 </head>
