--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <ul class="mt-3 space-y-2 text-[var(--muted)]">
           <li><strong class="text-[var(--ink)]">Địa điểm:</strong> Hà Nội (sẵn sàng làm remote)</li>
           <li><strong class="text-[var(--ink)]">Thâm niên:</strong> 3–5 năm làm playable/interactive ads & mobile game</li>
-          <li><strong class="text-[var(--ink)]">Mong muốn:</strong> Playable Ads Luna / Game Developer</li>
+          <li><strong class="text-[var(--ink)]">Mong muốn:</strong> Playable Ads Luna</li>
         </ul>
       </div>
       <div class="glass rounded-2xl p-5">
@@ -59,7 +59,7 @@
       <div class="glass rounded-2xl p-5">
         <h3 class="text-sm uppercase tracking-wider text-indigo-300/90">Liên hệ</h3>
         <ul class="mt-3 space-y-2">
-          <li>Email: <a class="underline" href="mailto:youremail@example.com">youremail@example.com</a></li>
+          <li>Email: <a class="underline" href="mailto:youremail@example.com">camthiennam5@gmail.com</a></li>
           <li>Điện thoại: 0xxx xxx xxx</li>
           <li>GitHub: <a class="underline" href="https://github.com/yourname" target="_blank" rel="noopener">github.com/yourname</a></li>
           <li>LinkedIn: <a class="underline" href="https://www.linkedin.com/in/yourname" target="_blank" rel="noopener">linkedin.com/in/yourname</a></li>
