--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     .chip{border:1px solid rgba(255,255,255,.18)}
     .thumb{border-radius:0.75rem; overflow:hidden;}
     .thumb img{width:100%; height:auto; display:block;}
-    .avatar{width:120px; height:120px;}
+    .avatar{width:140px; height:140px;}
+    .avatar img{width:100%; height:100%; object-fit:cover; object-position:top center;}
     @media print{.no-print{display:none} body{background:#fff} .glass{background:transparent;border:none} .print-white{color:#000}}
   </style>
 </head>
@@ -26,7 +27,7 @@
   <header class="max-w-4xl mx-auto px-6 pt-10 pb-6">
     <div class="glass rounded-2xl p-6 md:p-8 grid grid-cols-1 md:grid-cols-[auto,1fr] items-start gap-6">
       <div class="avatar rounded-full overflow-hidden ring-2 ring-indigo-400/30 shadow-lg">
-        <img src="avatar.jpg" alt="Ảnh đại diện Nguyễn Thế Hải" class="w-full h-full object-cover" loading="lazy" decoding="async">
+        <img src="avatar.jpg" alt="Ảnh đại diện Nguyễn Thế Hải" loading="lazy" decoding="async">
       </div>
       <div class="flex-1 max-w-prose">
         <h1 class="text-2xl md:text-3xl font-extrabold leading-tight">Nguyễn Thế Hải<span class="block text-xl md:text-2xl font-semibold text-indigo-400">Playable Ads Developer (Luna)</span></h1>
