--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
     <div class="mt-4 grid md:grid-cols-2 gap-4">
       <a class="glass rounded-2xl p-5 block hover:bg-white/5" href="https://play.google.com/store/apps/details?id=com.onegame.chickenshooter" target="_blank" rel="noopener">
         <div class="thumb mb-3">
-          <img src="avatar.jpg" alt="Strike Galaxy Attack thumbnail">
+          <img src="galaxy.png" alt="Strike Galaxy Attack thumbnail">
         </div>
         <h3 class="font-semibold">Strike Galaxy Attack</h3>
         <p class="text-[var(--muted)] mt-1">Game bắn gà không gian – hơn 5 triệu lượt tải trên Google Play.</p>
       </a>
       <a class="glass rounded-2xl p-5 block hover:bg-white/5" href="https://play.google.com/store/apps/details?id=com.onegame.stickzshooter" target="_blank" rel="noopener">
         <div class="thumb mb-3">
-          <img src="https://play-lh.googleusercontent.com/Lh30Ck3l6ftX0hzD1Kc3qakfvR6v89ZB5NOlN2iUpmVY7ZjQ8WmO4K-KbR5ewN6OtQ=w240-h480-rw" alt="Stickz Shooter thumbnail">
+          <img src="StickManHero.png" alt="Stickz Shooter thumbnail">
         </div>
         <h3 class="font-semibold">Stickz Shooter</h3>
         <p class="text-[var(--muted)] mt-1">Game bắn stickman – hơn 1 triệu lượt tải trên Google Play.</p>
