--- a/index.html
+++ b/index.html
@@ -150,6 +150,13 @@
         <h3 class="font-semibold">Stickz Shooter</h3>
         <p class="text-[var(--muted)] mt-1">Game bắn stickman – hơn 1 triệu lượt tải trên Google Play.</p>
       </a>
+      <a class="glass rounded-2xl p-5 block hover:bg-white/5" href="https://play.google.com/store/apps/details?id=com.onegame.stickzshooter" target="_blank" rel="noopener">
+        <div class="thumb mb-3">
+          <img src="StickManHero.png" alt="Stickz Shooter thumbnail">
+        </div>
+        <h3 class="font-semibold">Stickz Shooter</h3>
+        <p class="text-[var(--muted)] mt-1">Game bắn stickman – hơn 1 triệu lượt tải trên Google Play.</p>
+      </a>
     </div>
   </section>
 
