--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       </a>
       <a class="glass rounded-2xl p-5 block hover:bg-white/5" href="https://play.google.com/store/apps/details?id=com.onegameglobal.superstickfight" target="_blank" rel="noopener">
         <div class="thumb mb-3">
-          <img src="StickManHero.png" alt="Stickz Shooter thumbnail">
+          <img src="PVP.png" alt="Stickz Shooter thumbnail">
         </div>
         <h3 class="font-semibold">Hỗn Chiến Siêu Anh Hùng Vũ Trụ</h3>
         <p class="text-[var(--muted)] mt-1">Game đối kháng PVP,PVE – hơn 5 triệu lượt tải trên Google Play.</p>
