--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
           <span class="text-xs text-[var(--muted)]">2022 – 2025</span>
         </header>
         <ul class="mt-2 list-disc list-inside text-[var(--muted)] space-y-1">
-          <li>Thực hiện nhiều playable ads trong mảng game casual & utility, với nhiều dự án yêu cầu khắt khe về hiệu năng và dung lượng.</li>
+          <li>Thực hiện hàng trăm playable ads trong mảng game casual & utility, với nhiều dự án yêu cầu khắt khe về hiệu năng và dung lượng và chất lượng hình ảnh.</li>
           <li>Giải quyết sự cố khi chuyển project từ Unity sang Luna: sửa shader, tối ưu particle và model 3D.</li>
           <li>Viết script tự động hoá: thay thế MRAID, xoá token debug, build HTML/ZIP theo chuẩn network.</li>
-          <li>Xử lý lỗi phát sinh đa nền tảng: bug Safari/Android, crash khi rotate, asset xung đột.</li>
+          <li>Xử lý lỗi phát sinh đa nền tảng, đa màn hình crash khi rotate, asset xung đột.</li>
           <li>Kinh nghiệm tối ưu pipeline để playable hoạt động mượt và tương thích đa thiết bị.</li>
         </ul>
       </article>
@@ -123,7 +123,7 @@
           <span class="text-xs text-[var(--muted)]">2017 – 2020</span>
         </header>
         <ul class="mt-2 list-disc list-inside text-[var(--muted)] space-y-1">
-          <li>Phát triển game mobile độc lập: Strike Galaxy Attack, Stickz Shooter (công khai trên Google Play).</li>
+          <li>Phát triển game mobile độc lập: Strike Galaxy Attack, Stickz Shooter, SuperStickFight (công khai trên Google Play).</li>
           <li>Tham gia vào lập trình gameplay, tối ưu hiệu năng, phối hợp với art và QA.</li>
           <li>Thiết kế kiến trúc code gọn gàng, dễ hiểu, hỗ trợ chuyển giao.</li>
         </ul>
@@ -165,7 +165,6 @@
     <h2 class="text-xl font-bold">Học vấn & Chứng chỉ</h2>
     <ul class="mt-3 list-disc list-inside text-[var(--muted)] space-y-1">
       <li>Kỹ sư Trắc địa – (tốt nghiệp 2017)</li>
-      <li>Coursera/Meta HTML5 Games, Unity Learn (chứng chỉ online)</li>
     </ul>
   </section>
 
