--- a/index.html
+++ b/index.html
@@ -60,10 +60,8 @@
       <div class="glass rounded-2xl p-5">
         <h3 class="text-sm uppercase tracking-wider text-indigo-300/90">Liên hệ</h3>
         <ul class="mt-3 space-y-2">
-          <li>Email: <a class="underline" href="mailto:youremail@example.com">youremail@example.com</a></li>
-          <li>Điện thoại: 0xxx xxx xxx</li>
-          <li>GitHub: <a class="underline" href="https://github.com/yourname" target="_blank" rel="noopener">github.com/yourname</a></li>
-          <li>LinkedIn: <a class="underline" href="https://www.linkedin.com/in/yourname" target="_blank" rel="noopener">linkedin.com/in/yourname</a></li>
+          <li>Email: <a class="underline" href="mailto:youremail@example.com">camthiennam5@gmail.com</a></li>
+          <li>Điện thoại: 0384 828 164</li>
         </ul>
       </div>
     </div>
