--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <a href="#experience" class="chip px-4 py-2 rounded-xl hover:bg-white/5">Kinh nghiệm</a>
         <a href="#projects" class="chip px-4 py-2 rounded-xl hover:bg-white/5">Dự án</a>
         <a href="#contact" class="chip px-4 py-2 rounded-xl hover:bg-white/5">Liên hệ</a>
+        <a href="#" onclick="generatePDF()" class="chip px-4 py-2 rounded-xl hover:bg-white/5">Xuất PDF</a>
       </nav>
     </div>
   </header>
